--- a/c2.html
+++ b/c2.html
@@ -112,7 +112,7 @@ h2 {
 <h2 class="l"><span class="d"><span class="l">-Antonio Gutiérrez de Umaña y Francisco Leyba de  Bonilla 1590. Desde Santa Bárbara para explorar Nuevo México.  1594 Una expedición no autorizada hacia el Norte, es posible que pasara por el  Río Bravo, llegara hasta Nuevo México y los actuales Arkansas y Kansas. Casi  toda esta expedición es conocida por un náhuatl sobreviviente que relató el fin  de la historia,​ el indígena fue encontrado en 1598 por miembros de la  expedición de Oñate, refugiado entre los indígenas pueblo en Nuevo México.​</span></span></h2>
 <h2 class="l"><span class="d"><span class="l">-Vicente de Zaldívar en 1598 Para  encontrar un camino más directo a Paso del Norte desde Santa Bárbara, en  preparación de la expedición de Oñate. Las expediciones anteriores habían  seguido el Río Conchos hasta La Junta con el Río Bravo y de ahí este último  hacia el norte.</span></span></h2>
 <h2 class="l"><span class="d"><span class="l">-Juan de Oñate en abril de 1598 cruzando  el Río Bravo en Paso del Norte, creando el Camino Real al fundar Santa Juana en  Nuevo México y recorrer la ruta de regreso hacia la Ciudad de México. Llevaba  consigo 30 familias para colonizar Nuevo México.</span></span></h2>
-<p class="LK"><a href="INICIO/111.html" title="INICIO" target="_parent">VOLVER A PAGINA PRINCIPAL &gt;</a></p>
+<p class="LK"><a href="index.html" title="INICIO" target="_parent">VOLVER A PAGINA PRINCIPAL &gt;</a></p>
 <p class="LK">&nbsp;</p>
 <p>&nbsp;</p>
 <script type="text/javascript">
