--- a/derecho batopilas.html
+++ b/derecho batopilas.html
@@ -24,7 +24,7 @@ body {
 <p><a name="ba" id="ba"></a><a href="municipios.html#ba" target="mainFrame">BATOPILAS</a></p>
 <p><a name="ua" id="ua"></a><a href="municipios.html#ua" target="mainFrame">URUACHI</a></p>
 <p><a name="hdp" id="hdp"></a><a href="municipios.html#hdp" target="mainFrame">HIDALGO DEL PARRAL</a></p>
-<p class="R"><a href="INICIO/111.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
+<p class="R"><a href="index.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
 <p>&nbsp;</p>
 </body>
 </html>
