--- a/g2.html
+++ b/g2.html
@@ -133,6 +133,6 @@ tgfv {
 </blockquote>
 <p class="fgh"><span class="dsgreg"><b>Geografia </b></span><b>Fisica </b></p>
 <p><span class="ghsx"><span class="djcghnj">La flora del estado es diversa según se trate de la región de la sierra, de la llanura o del desierto. En la desértica encontramos muy poca vegetación y los animales, altamente adaptados al medio, tienen colores y figuras diferentes a sus similares de otras partes del estado. En la llamada Zona del Silencio (en Bolsón del Mapimí), dentro de sus límites o cercanías, caen aerolitos y meteoritos con mayor frecuencia que en otras partes del mundo. En la sierra crecen el aile, el abeto, el chamal, el ciprés y diferentes encinos; aquí se crían el venado cola blanca, el jabalí, el gato montés, el puma, el coyote, el pájaro carpintero y la guacamaya una de las diez especies de aves registradas en la sierra </span></span><span class="sdf"><span class="sdfdas">tarahumara que se encuentran en peligro de extinción. Existen en el estado tres áreas naturales protegidas que cubren una superficie de cerca de 288.000 hectáreas: los Parques Nacionales de la Cascada de Bassaseachic y de Cumbres de Majalca, y el Área de Protección de Flora y Fauna Cañón de Santa Elena</span>.</span></p>
-<p><a href="INICIO/111.html" title="INICIO" target="_parent"><strong>VOLVER A PAGINA INICIAL&gt;</strong></a></p>
+<p><a href="index.html" title="INICIO" target="_parent"><strong>VOLVER A PAGINA INICIAL&gt;</strong></a></p>
 </body>
 </html>
