--- a/222.html
+++ b/222.html
@@ -40,11 +40,11 @@ a:active {
 <p align="center"><img src="niña.png" width="135" height="249" alt="ddzfgiuf" /><img src="1200px-Coat_of_arms_of_Chihuahua.svg.png" width="199" height="240" alt="uiy" /><img src="niño.png" width="146" height="278" alt=".lkwjerhawe" /></p>
 <p class="Estilo1">En  esta materia se ve por completo el Estado de Chihuahua, su zona geográfica, su  historia desde su fundación hasta la actualidad, sus etnias extintas y las que  siguen aun hoy en día, también se ven sus Pueblos mágicos y su recursos  naturales que se aprovechan y aprovecharon, los lugares históricos y  emblemáticos que han marcado la historia de Chihuahua a nivel nacional.</p>
 <h1 class="Estilo1">Menú</h1>
-<p><a href="../geo.html" target="_parent">1.1 Geografia Fisica</a></p>
-<p><a href="../MAIN.html" target="new">2.1 Primeros pobladores: Primeros pueblos etnicos en Chihuahua</a></p>
-<p><a href="../c.html" target="_parent">3.1 Conquista y Colonizaión:</a> <a href="../c.html" target="_parent">Conquista y</a> <a href="../e.html">Evangelización</a>, <a href="../pueblo minero.html" target="_parent">Pueblos mineros</a></p>
-<p><a href="../r.html" target="_parent">5.1 Revolución Mexicana</a></p>
-<p><a href="../q.html" target="_parent">5.2 Chihuahua Post-Revolucionarió: Quevedismo</a></p>
+<p><a href="geo.html" target="_parent">1.1 Geografia Fisica</a></p>
+<p><a href="MAIN.html" target="_parent">2.1 Primeros pobladores: Primeros pueblos etnicos en Chihuahua</a></p>
+<p><a href="../c.html" target="_parent">3.1 Conquista y Colonizaión:</a> <a href="c.html" target="_parent">Conquista y</a> <a href="e.html" target="_parent">Evangelización</a>, <a href="pueblo minero.html" target="_parent">Pueblos mineros</a></p>
+<p><a href="r.html" target="_parent">5.1 Revolución Mexicana</a></p>
+<p><a href="q.html" target="_parent">5.2 Chihuahua Post-Revolucionarió: Quevedismo</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p class="Estilo1">&nbsp;</p>
