--- a/GEC.html
+++ b/GEC.html
@@ -26,6 +26,6 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgRight:"SpryAssets/SpryMen
 <p><a name="CONCHOS" id="CONCHOS"></a><a href="INFO.html#Conchos" target="rightFrame">CONCHOS</a></p>
 <p><a name="APACHES" id="APACHES"></a><a href="INFO.html#Apaches" target="rightFrame">APACHES</a></p>
 <p>&nbsp;</p>
-<p><a href="INICIO/111.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
+<p><a href="index.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
 </body>
 </html>
