--- a/r3.html
+++ b/r3.html
@@ -20,6 +20,6 @@ body p {
 <p>&nbsp;</p>
 <p><a name="chi" id="chi"></a><a href="r2.html#Rev.Chih" target="mainFrame">CHIHUAHUA</a></p>
 <p>&nbsp;</p>
-<p><a href="INICIO/111.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
+<p><a href="index.html" target="_parent">VOLVER A PAGINA PRINCIPAL&gt;</a></p>
 </body>
 </html>
